feat: Update upload studies endpoint
- Return study UIDs in upload API
- Update swagger.yaml
